--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+aiofiles==0.8.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
 attrs==21.4.0
+charset-normalizer==2.0.12
+frozenlist==1.3.0
+idna==3.3
 iniconfig==1.1.1
+install==1.3.5
+multidict==6.0.2
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.1.1
+PyYAML==6.0
+response-handler==1.0.0
 tomli==2.0.1
+yarl==1.7.2
