--- a/testcase/02.yaml
+++ b/testcase/02.yaml
@@ -1,13 +1,11 @@
 args:
-  - post
-  - /posts
+  - get
+  - /posts/1
 kwargs:
   -
-    caseName: create_posts
+    caseName: get_posts
 #    caseDescription: 创建posts资源
     data:
-      name: xiaoming
-      score: 100
 validator:
   -
     json:
